--- a/_modules/index.html
+++ b/_modules/index.html
@@ -146,9 +146,10 @@
            <div itemprop="articleBody">
             
   <h1>All modules for which code is available</h1>
-<ul><li><a href="license_recog/detector.html">license_recog.detector</a></li>
-<li><a href="models/arcnet.html">models.arcnet</a></li>
-<li><a href="models/retina.html">models.retina</a></li>
+<ul><li><a href="face_recognition/models/arcnet.html">face_recognition.models.arcnet</a></li>
+<li><a href="face_recognition/models/retina.html">face_recognition.models.retina</a></li>
+<li><a href="license_recognition/models/ocr.html">license_recognition.models.ocr</a></li>
+<li><a href="license_recognition/models/wpod.html">license_recognition.models.wpod</a></li>
 </ul>
 
            </div>
