--- a/genindex.html
+++ b/genindex.html
@@ -154,17 +154,20 @@
  <a href="#A"><strong>A</strong></a>
  | <a href="#B"><strong>B</strong></a>
  | <a href="#D"><strong>D</strong></a>
+ | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
+ | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
+ | <a href="#W"><strong>W</strong></a>
  
 </div>
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pkg/face_recognition.html#models.arcnet.ArcFace">ArcFace (class in models.arcnet)</a>
+      <li><a href="pkg/face_recognition.html#face_recognition.models.arcnet.ArcFace">ArcFace (class in face_recognition.models.arcnet)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -172,11 +175,11 @@
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pkg/face_recognition.html#models.retina.RetinaFace.bbox_pred">bbox_pred() (models.retina.RetinaFace static method)</a>
+      <li><a href="pkg/face_recognition.html#face_recognition.models.retina.RetinaFace.bbox_pred">bbox_pred() (face_recognition.models.retina.RetinaFace static method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pkg/face_recognition.html#models.retina.RetinaFace.bbox_vote">bbox_vote() (models.retina.RetinaFace method)</a>
+      <li><a href="pkg/face_recognition.html#face_recognition.models.retina.RetinaFace.bbox_vote">bbox_vote() (face_recognition.models.retina.RetinaFace method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -184,27 +187,49 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pkg/face_recognition.html#models.retina.RetinaFace.detect_fast">detect_fast() (models.retina.RetinaFace method)</a>
+      <li><a href="pkg/face_recognition.html#face_recognition.models.retina.RetinaFace.detect_fast">detect_fast() (face_recognition.models.retina.RetinaFace method)</a>
 </li>
+  </ul></td>
+</tr></table>
+
+<h2 id="F">F</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    face_recognition.models.arcnet
+
+      <ul>
+        <li><a href="pkg/face_recognition.html#module-face_recognition.models.arcnet">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    face_recognition.models.retina
+
+      <ul>
+        <li><a href="pkg/face_recognition.html#module-face_recognition.models.retina">module</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pkg/face_recognition.html#models.arcnet.ArcFace.get_feature">get_feature() (models.arcnet.ArcFace method)</a>
+      <li><a href="pkg/face_recognition.html#face_recognition.models.arcnet.ArcFace.get_feature">get_feature() (face_recognition.models.arcnet.ArcFace method)</a>
 </li>
-      <li><a href="pkg/face_recognition.html#models.arcnet.ArcFace.get_input_2">get_input_2() (models.arcnet.ArcFace method)</a>
+      <li><a href="pkg/face_recognition.html#face_recognition.models.arcnet.ArcFace.get_input_2">get_input_2() (face_recognition.models.arcnet.ArcFace method)</a>
 </li>
-      <li><a href="pkg/face_recognition.html#models.arcnet.ArcFace.get_input_3">get_input_3() (models.arcnet.ArcFace method)</a>
+      <li><a href="pkg/face_recognition.html#face_recognition.models.arcnet.ArcFace.get_input_3">get_input_3() (face_recognition.models.arcnet.ArcFace method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pkg/face_recognition.html#models.arcnet.ArcFace.get_model">get_model() (models.arcnet.ArcFace method)</a>
+      <li><a href="pkg/face_recognition.html#face_recognition.models.arcnet.ArcFace.get_model">get_model() (face_recognition.models.arcnet.ArcFace method)</a>
 </li>
-      <li><a href="pkg/license_recog.html#license_recog.detector.LP_Detector.get_number">get_number() (license_recog.detector.LP_Detector method)</a>
+      <li><a href="pkg/license_recog.html#license_recognition.models.ocr.OCR.get_number">get_number() (license_recognition.models.ocr.OCR method)</a>
 </li>
-      <li><a href="pkg/license_recog.html#license_recog.detector.LP_Detector.get_plate">get_plate() (license_recog.detector.LP_Detector method)</a>
+      <li><a href="pkg/license_recog.html#license_recognition.models.wpod.WPOD.get_plate">get_plate() (license_recognition.models.wpod.WPOD method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -212,22 +237,29 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pkg/face_recognition.html#models.retina.RetinaFace.landmark_pred">landmark_pred() (models.retina.RetinaFace static method)</a>
+      <li><a href="pkg/face_recognition.html#face_recognition.models.retina.RetinaFace.landmark_pred">landmark_pred() (face_recognition.models.retina.RetinaFace static method)</a>
 </li>
       <li>
-    license_recog.detector
+    license_recognition.models.ocr
 
       <ul>
-        <li><a href="pkg/license_recog.html#module-license_recog.detector">module</a>
+        <li><a href="pkg/license_recog.html#module-license_recognition.models.ocr">module</a>
+</li>
+      </ul></li>
+      <li>
+    license_recognition.models.wpod
+
+      <ul>
+        <li><a href="pkg/license_recog.html#module-license_recognition.models.wpod">module</a>
 </li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pkg/license_recog.html#license_recog.detector.LP_Detector.load_model_ocr">load_model_ocr() (license_recog.detector.LP_Detector method)</a>
+      <li><a href="pkg/license_recog.html#license_recognition.models.ocr.OCR.load_classes">load_classes() (license_recognition.models.ocr.OCR method)</a>
 </li>
-      <li><a href="pkg/license_recog.html#license_recog.detector.LP_Detector.load_model_plate">load_model_plate() (license_recog.detector.LP_Detector method)</a>
+      <li><a href="pkg/license_recog.html#license_recognition.models.ocr.OCR.load_model_ocr">load_model_ocr() (license_recognition.models.ocr.OCR method)</a>
 </li>
-      <li><a href="pkg/license_recog.html#license_recog.detector.LP_Detector">LP_Detector (class in license_recog.detector)</a>
+      <li><a href="pkg/license_recog.html#license_recognition.models.wpod.WPOD.load_model_plate">load_model_plate() (license_recognition.models.wpod.WPOD method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -236,39 +268,33 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
-    models.arcnet
-
-      <ul>
-        <li><a href="pkg/face_recognition.html#module-models.arcnet">module</a>
-</li>
-      </ul></li>
-      <li>
-    models.retina
-
-      <ul>
-        <li><a href="pkg/face_recognition.html#module-models.retina">module</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li>
     module
 
       <ul>
-        <li><a href="pkg/license_recog.html#module-license_recog.detector">license_recog.detector</a>
+        <li><a href="pkg/face_recognition.html#module-face_recognition.models.arcnet">face_recognition.models.arcnet</a>
 </li>
-        <li><a href="pkg/face_recognition.html#module-models.arcnet">models.arcnet</a>
+        <li><a href="pkg/face_recognition.html#module-face_recognition.models.retina">face_recognition.models.retina</a>
 </li>
-        <li><a href="pkg/face_recognition.html#module-models.retina">models.retina</a>
+        <li><a href="pkg/license_recog.html#module-license_recognition.models.ocr">license_recognition.models.ocr</a>
+</li>
+        <li><a href="pkg/license_recog.html#module-license_recognition.models.wpod">license_recognition.models.wpod</a>
 </li>
       </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="O">O</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pkg/license_recog.html#license_recognition.models.ocr.OCR">OCR (class in license_recognition.models.ocr)</a>
+</li>
   </ul></td>
 </tr></table>
 
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pkg/face_recognition.html#models.arcnet.ArcFace.preprocess">preprocess() (models.arcnet.ArcFace method)</a>
+      <li><a href="pkg/face_recognition.html#face_recognition.models.arcnet.ArcFace.preprocess">preprocess() (face_recognition.models.arcnet.ArcFace method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -276,11 +302,19 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pkg/face_recognition.html#models.arcnet.ArcFace.read_image">read_image() (models.arcnet.ArcFace method)</a>
+      <li><a href="pkg/face_recognition.html#face_recognition.models.arcnet.ArcFace.read_image">read_image() (face_recognition.models.arcnet.ArcFace method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pkg/face_recognition.html#models.retina.RetinaFace">RetinaFace (class in models.retina)</a>
+      <li><a href="pkg/face_recognition.html#face_recognition.models.retina.RetinaFace">RetinaFace (class in face_recognition.models.retina)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="W">W</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pkg/license_recog.html#license_recognition.models.wpod.WPOD">WPOD (class in license_recognition.models.wpod)</a>
 </li>
   </ul></td>
 </tr></table>
