--- a/output/authors.html
+++ b/output/authors.html
@@ -10,22 +10,22 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://leviethung1280.github.io/theme/stylesheet/style.min.css">
 
 
     <link id="pygments-light-theme" rel="stylesheet" type="text/css"
-          href="http://localhost:8000/theme/pygments/friendly.min.css">
+          href="https://leviethung1280.github.io/theme/pygments/friendly.min.css">
 
 
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="https://leviethung1280.github.io/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://leviethung1280.github.io/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://leviethung1280.github.io/theme/font-awesome/css/solid.css">
 
 
 
 
-    <link rel="shortcut icon" href="http://localhost:8000/images/favicon-16x16.png" type="image/x-icon">
-    <link rel="icon" href="http://localhost:8000/images/favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://leviethung1280.github.io/images/favicon-16x16.png" type="image/x-icon">
+    <link rel="icon" href="https://leviethung1280.github.io/images/favicon-16x16.png" type="image/x-icon">
 
 <!-- Google Analytics -->
 <script type="text/javascript">
@@ -49,8 +49,8 @@
   <meta property="og:title" content="Hung Le Viet"/>
   <meta property="og:description" content="AI and Technology"/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="http://localhost:8000"/>
-  <meta property="og:image" content="http://localhost:8000/images/avatar.jpeg">
+  <meta property="og:url" content="https://leviethung1280.github.io"/>
+  <meta property="og:image" content="https://leviethung1280.github.io/images/avatar.jpeg">
 
   <title>Hung Le Viet &ndash; Authors</title>
 
@@ -73,16 +73,35 @@
 </noscript>
 <!-- End Google Tag Manager -->  <aside>
     <div>
-      <a href="http://localhost:8000/">
-        <img src="http://localhost:8000/images/avatar.jpeg" alt="" title="">
+      <a href="https://leviethung1280.github.io/">
+        <img src="https://leviethung1280.github.io/images/avatar.jpeg" alt="" title="">
       </a>
 
       <h1>
-        <a href="http://localhost:8000/"></a>
+        <a href="https://leviethung1280.github.io/"></a>
       </h1>
 
 <p>AI Engineer</p>
 
+      <nav>
+        <ul class="list">
+
+
+              <li>
+                <a target="_self"
+                   href="https://leviethung1280.github.io/about/#about">
+                  About
+                </a>
+              </li>
+              <li>
+                <a target="_self"
+                   href="https://leviethung1280.github.io/contact/#contact">
+                  Contact
+                </a>
+              </li>
+
+        </ul>
+      </nav>
 
       <ul class="social">
           <li>
@@ -122,7 +141,7 @@
   <main>
 
     <nav>
-      <a href="http://localhost:8000/">Home</a>
+      <a href="https://leviethung1280.github.io/">Home</a>
 
       <a href="/archives">Archives</a>
       <a href="/categories">Categories</a>
@@ -137,7 +156,7 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="http://localhost:8000/author/hung-le-vie.html">Hung Le Vie</a> (1)</li>
+      <li><a href="https://leviethung1280.github.io/author/hung-le-vie.html">Hung Le Vie</a> (1)</li>
     </ul>
   </div>
 </article>
@@ -157,8 +176,8 @@ Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a 
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Hung Le Viet ",
-  "url" : "http://localhost:8000",
-  "image": "http://localhost:8000/images/avatar.jpeg",
+  "url" : "https://leviethung1280.github.io",
+  "image": "https://leviethung1280.github.io/images/avatar.jpeg",
   "description": "AI and Technology"
 }
 </script>
